sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	for (i<-1 to getNombreValeurs()-1) {
		var variable = getValeur(i)
		for (j <- 1 to i) {
			if plusPetit(v,i-j)
				{copie(i-j,i-j+1)}
		}
	}
}
